crates/vexor-compiler/tests/golden/error/output/circle_arity.err
parse error at line 2, column 23
  |
2 | let c = Circle(10, 20)
  |                       ^
expected exactly one argument